chore: remove .idea e .iml do controle de versão

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@
 # VS Code settings
 .vscode/
 
+# JetBrains IDEs (IntelliJ, PhpStorm, PyCharm etc)
+.idea/
+
+# Ignorar arquivos .iml
+*.iml
+
 # Package Files #
 *.jar
 *.war
